(search) Fix z-index issues

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -5446,7 +5446,7 @@ table.api-keys {
 }
 
 .multiselect--active {
-  z-index: 1040;
+  z-index: 1;
 }
 
 .multiselect--above .multiselect__content-wrapper,
@@ -5456,7 +5456,7 @@ table.api-keys {
   border-color: #282828;
   color: #f0f0f0;
   position: absolute;
-  z-index: 1040;
+  z-index: 1;
 }
 
 .multiselect__tags {
@@ -5568,8 +5568,27 @@ table.api-keys {
       padding: 0 8px;
 
       &#field-radius-slider {
-        // This must be quite large because otherwise it's too difficult to set finely.
-        width: 300px;
+        @media screen and (min-width: 481px) {
+          // This must be quite large because otherwise it's too difficult to set finely.
+          width: 300px;
+        }
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      display: block;
+
+      .form-group {
+        display: block;
+        height: auto;
+      }
+
+      input:not([type='checkbox']), .slider-filter {
+        width: 100%;
+      }
+
+      input[type='text'] {
+        width: calc(100% - 14px);
       }
     }
   }
